Updated to work with Java 11. Keep POM at 8 for moment to maintain SWRLTab compatibaility with Protege; upgrade when Protege upgrades